--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         </div>
 
     </div>
+
+    <div class="container">
+        <div id="my-barchart"></div>
+    </div>
+
     <div class="container">
         <div id="my-timeline"></div>
     </div>
@@ -59,6 +64,7 @@
     <script src="js/main.js"></script>
     <script src="js/leafletMap.js"></script>
     <script src="js/timeline.js"></script>
+    <script src="js/wavePlot.js"></script>
 
     <div id="tooltip"></div>
 </body>
