--- a/index.html
+++ b/index.html
@@ -59,12 +59,17 @@
         <div id="my-timeline"></div>
     </div>
 
+    <div class="container">
+        <div id="my-focus-timeline"></div>
+    </div>
+
     <script src="js/d3.v6.min.js"></script>
     <script src="js/leaflet.js"></script>
     <script src="js/main.js"></script>
     <script src="js/leafletMap.js"></script>
     <script src="js/timeline.js"></script>
     <script src="js/wavePlot.js"></script>
+    <script src="js/focusTimeline.js"></script>
 
     <div id="tooltip"></div>
 </body>
