getting refactored timeline working to update other graphs

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <script src="js/leafletMap.js"></script>
     <script src="js/timeline.js"></script>
     <script src="js/wavePlot.js"></script>
+    <script src="js/timeWavePlot.js"></script>
     <script src="js/focusTimeline.js"></script>
 
     <div id="tooltip"></div>
