filter sync mechanism is no longer a sin against God

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <input type="number" id="rate" value="1000">
                 <button id="start-animation">Start Animation</button>
                 <button id="stop-animation">Stop Animation</button>
+                <button id="reset-filters">Reset Plot Filters</button>
             </div>
         </div>
 
@@ -57,10 +58,6 @@
 
     <div class="container">
         <div id="my-timeline"></div>
-    </div>
-
-    <div class="container">
-        <div id="my-focus-timeline"></div>
     </div>
 
     <script src="js/d3.v6.min.js"></script>
